[tool.poetry]
name = "decision-tree"
version = "1.1.0"
description = ""
authors = ["Marta <mswolinska@gmail.com>"]
packages = [
    { include = "Decision_Tree" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.22.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
decision_tree = 'Decision_Tree.cli:main'
