[tool.poetry]
name = "decision-tree"
version = "v2.2.2"
description = ""
authors = ["Marta <mswolinska@gmail.com>"]
packages = [
    { include = "Decision_Tree" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.22.3"
graphviz = "^0.20"
dill = "^0.3.5"
cleo = "^0.8.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
decision-tree = 'Decision_Tree.cli:main'
